sigtran_HEADERS = \
	mtp_sap.h \
	osmo_ss7.h \
	sccp_helpers.h \
	sccp_sap.h \
	sigtran_sap.h \
	xua_msg.h \
	$(NULL)

sigtrandir = $(includedir)/osmocom/sigtran

sigtran_prot_HEADERS = \
	protocol/sua.h \
	protocol/m2ua.h \
	protocol/m3ua.h \
	protocol/mtp.h \
	protocol/sccp_scmg.h \
	$(NULL)

sigtran_protdir = $(includedir)/osmocom/sigtran/protocol
